--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="calculator-container">
+        <!-- Choose Calculator -->
         <div class="calc-selector">
             <input type="radio" id="classic" name="calc-type" value="classic" checked>
             <label for="classic">Classic</label>
@@ -205,8 +206,10 @@
         </div>
     </div>
 
+    <!-- Author -->
     <p class="author">Copyright © Bazzomir 2025 </p>
 
+    <!-- Keyboard Helper -->
     <div class="keyboard-hint">
         <strong>Keyboard Shortcuts:</strong><br>
         Numbers: 0-9<br>
