--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="calculator-container">
-        <!-- Choose Calculator -->
+        <!-- Calculator Mode Selector -->
         <div class="calc-selector">
             <input type="radio" id="classic" name="calc-type" value="classic" checked>
             <label for="classic">Classic</label>
@@ -26,8 +26,8 @@
             <label for="units">Units</label>
         </div>
 
-        <!-- Classic & Scientific Calculator Display -->
-        <div id="calc-display" class="display">
+        <!-- Display -->
+        <div class="display" id="display">
             <div class="display-top" id="expression"></div>
             <div class="display-bottom" id="result">
                 <span id="current-input">0</span>
@@ -40,25 +40,25 @@
             <button class="btn clear" onclick="clearAll()">C</button>
             <button class="btn clear" onclick="clearEntry()">CE</button>
             <button class="btn" onclick="backspace()">⌫</button>
-            <button class="btn operator" onclick="inputOperator('/')">/</button>
+            <button class="btn operator" onclick="appendOperator('/')">/</button>
 
-            <button class="btn" onclick="inputNumber('7')">7</button>
-            <button class="btn" onclick="inputNumber('8')">8</button>
-            <button class="btn" onclick="inputNumber('9')">9</button>
-            <button class="btn operator" onclick="inputOperator('*')">×</button>
+            <button class="btn" onclick="appendDigit('7')">7</button>
+            <button class="btn" onclick="appendDigit('8')">8</button>
+            <button class="btn" onclick="appendDigit('9')">9</button>
+            <button class="btn operator" onclick="appendOperator('*')">×</button>
 
-            <button class="btn" onclick="inputNumber('4')">4</button>
-            <button class="btn" onclick="inputNumber('5')">5</button>
-            <button class="btn" onclick="inputNumber('6')">6</button>
-            <button class="btn operator" onclick="inputOperator('-')">-</button>
+            <button class="btn" onclick="appendDigit('4')">4</button>
+            <button class="btn" onclick="appendDigit('5')">5</button>
+            <button class="btn" onclick="appendDigit('6')">6</button>
+            <button class="btn operator" onclick="appendOperator('-')">-</button>
 
-            <button class="btn" onclick="inputNumber('1')">1</button>
-            <button class="btn" onclick="inputNumber('2')">2</button>
-            <button class="btn" onclick="inputNumber('3')">3</button>
-            <button class="btn operator" onclick="inputOperator('+')">+</button>
+            <button class="btn" onclick="appendDigit('1')">1</button>
+            <button class="btn" onclick="appendDigit('2')">2</button>
+            <button class="btn" onclick="appendDigit('3')">3</button>
+            <button class="btn operator" onclick="appendOperator('+')">+</button>
 
-            <button class="btn" onclick="inputNumber('0')" style="grid-column: span 2;">0</button>
-            <button class="btn" onclick="inputNumber('.')">.</button>
+            <button class="btn" onclick="appendDigit('0')" style="grid-column: span 2;">0</button>
+            <button class="btn" onclick="appendDigit('.')">.</button>
             <button class="btn equals" onclick="calculate()">=</button>
         </div>
 
@@ -67,36 +67,36 @@
             <button class="btn clear" onclick="clearAll()">C</button>
             <button class="btn clear" onclick="clearEntry()">CE</button>
             <button class="btn" onclick="backspace()">⌫</button>
-            <button class="btn operator" onclick="inputOperator('/')">/</button>
+            <button class="btn operator" onclick="appendOperator('/')">/</button>
             <button class="btn function" onclick="inputFunction('sqrt(')">√</button>
 
             <button class="btn function" onclick="inputFunction('sin(')">sin</button>
             <button class="btn function" onclick="inputFunction('cos(')">cos</button>
             <button class="btn function" onclick="inputFunction('tan(')">tan</button>
             <button class="btn function" onclick="inputFunction('log(')">log</button>
-            <button class="btn operator" onclick="inputOperator('^')">x^y</button>
+            <button class="btn operator" onclick="appendOperator('^')">x^y</button>
 
-            <button class="btn" onclick="inputNumber('7')">7</button>
-            <button class="btn" onclick="inputNumber('8')">8</button>
-            <button class="btn" onclick="inputNumber('9')">9</button>
-            <button class="btn operator" onclick="inputOperator('*')">×</button>
+            <button class="btn" onclick="appendDigit('7')">7</button>
+            <button class="btn" onclick="appendDigit('8')">8</button>
+            <button class="btn" onclick="appendDigit('9')">9</button>
+            <button class="btn operator" onclick="appendOperator('*')">×</button>
             <button class="btn function" onclick="inputFunction('factorial(')">n!</button>
 
-            <button class="btn" onclick="inputNumber('4')">4</button>
-            <button class="btn" onclick="inputNumber('5')">5</button>
-            <button class="btn" onclick="inputNumber('6')">6</button>
-            <button class="btn operator" onclick="inputOperator('-')">-</button>
-            <button class="btn function" onclick="inputOperator('%')">%</button>
+            <button class="btn" onclick="appendDigit('4')">4</button>
+            <button class="btn" onclick="appendDigit('5')">5</button>
+            <button class="btn" onclick="appendDigit('6')">6</button>
+            <button class="btn operator" onclick="appendOperator('-')">-</button>
+            <button class="btn function" onclick="appendOperator('%')">%</button>
 
-            <button class="btn" onclick="inputNumber('1')">1</button>
-            <button class="btn" onclick="inputNumber('2')">2</button>
-            <button class="btn" onclick="inputNumber('3')">3</button>
-            <button class="btn operator" onclick="inputOperator('+')">+</button>
+            <button class="btn" onclick="appendDigit('1')">1</button>
+            <button class="btn" onclick="appendDigit('2')">2</button>
+            <button class="btn" onclick="appendDigit('3')">3</button>
+            <button class="btn operator" onclick="appendOperator('+')">+</button>
             <button class="btn function" onclick="inputFunction('(')">(</button>
 
-            <button class="btn" onclick="inputNumber('0')">0</button>
-            <button class="btn" onclick="inputNumber('00')">00</button>
-            <button class="btn" onclick="inputNumber('.')">.</button>
+            <button class="btn" onclick="appendDigit('0')">0</button>
+            <button class="btn" onclick="appendDigit('00')">00</button>
+            <button class="btn" onclick="appendDigit('.')">.</button>
             <button class="btn equals" onclick="calculate()">=</button>
             <button class="btn function" onclick="inputFunction(')')">)</button>
 
@@ -104,20 +104,36 @@
             <button class="btn function" onclick="inputConstant('e')">e</button>
             <button class="btn function" onclick="inputFunction('exp(')">exp</button>
             <button class="btn function" onclick="inputFunction('log10(')">log10</button>
-            <button class="btn function" onclick="inputFunction('ln2')">ln2</button>
+            <button class="btn function" onclick="inputFunction('ln(')">ln</button>
         </div>
 
         <!-- Binary Calculator -->
-        <div id="binary-calc" class="binary-section hidden">
-            <div class="binary-input">
-                <label for="decimal-input">Decimal Number:</label>
-                <input type="number" id="decimal-input" placeholder="Enter decimal number">
-            </div>
-            <div class="binary-input">
-                <label for="binary-input">Binary Number:</label>
-                <input type="text" id="binary-input" placeholder="Enter binary number (0s and 1s only)">
-            </div>
-            <button class="btn clear" onclick="clearAll()">Reset</button>
+        <div id="binary-calc" class="buttons binary-buttons hidden">
+            <button class="btn clear" onclick="clearAll()">C</button>
+            <button class="btn clear" onclick="clearEntry()">CE</button>
+            <button class="btn operator" onclick="appendOperator('/')">/</button>
+            <button class="btn operator" onclick="appendOperator('*')">×</button>
+
+            <button class="btn" onclick="appendDigit('1')">1</button>
+            <button class="btn" onclick="appendDigit('0')">0</button>
+            <button class="btn disabled">2</button>
+            <button class="btn operator" onclick="appendOperator('-')">-</button>
+
+            <button class="btn disabled">3</button>
+            <button class="btn disabled">4</button>
+            <button class="btn disabled">5</button>
+            <button class="btn operator" onclick="appendOperator('+')">+</button>
+
+            <button class="btn disabled">6</button>
+            <button class="btn disabled">7</button>
+            <button class="btn disabled">8</button>
+            <button class="btn equals" onclick="calculate()">=</button>
+        </div>
+
+        <!-- Binary Conversion Display -->
+        <div class="conversion hidden" id="conversion">
+            <h3>Decimal Equivalent:</h3>
+            <div id="decimal">0</div>
         </div>
 
         <!-- Unit Converter -->
@@ -151,7 +167,6 @@
                 <div class="converter-row">
                     <strong>Result: <span id="length-result">0</span></strong>
                 </div>
-                <button class="btn clear" onclick="clearAll()">Clear</button>
             </div>
 
             <div class="converter-section">
@@ -179,7 +194,6 @@
                 <div class="converter-row">
                     <strong>Result: <span id="weight-result">0</span></strong>
                 </div>
-                <button class="btn clear" onclick="clearAll()">Clear</button>
             </div>
 
             <div class="converter-section">
@@ -201,7 +215,6 @@
                 <div class="converter-row">
                     <strong>Result: <span id="temp-result">0</span></strong>
                 </div>
-                <button class="btn clear" onclick="clearAll()">Clear</button>
             </div>
         </div>
     </div>
@@ -222,6 +235,7 @@
         (: Open parenthesis<br>
         ): Close parenthesis
     </div>
+    <!-- </div> -->
 
 </body>
 
