--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                         <option value="yd">Yard</option>
                         <option value="mi">Mile</option>
                     </select>
+                    <button class="btn reset-btn">C</button>
                 </div>
                 <div class="converter-row">
                     <strong>Result: <span id="length-result">0</span></strong>
@@ -190,6 +191,7 @@
                         <option value="lb">Pound</option>
                         <option value="ton">Ton</option>
                     </select>
+                    <button class="btn reset-btn" onclick="clearAll()">C</button>
                 </div>
                 <div class="converter-row">
                     <strong>Result: <span id="weight-result">0</span></strong>
@@ -211,6 +213,7 @@
                         <option value="F">Fahrenheit</option>
                         <option value="K">Kelvin</option>
                     </select>
+                    <button class="btn reset-btn" onclick="clearAll()">C</button>
                 </div>
                 <div class="converter-row">
                     <strong>Result: <span id="temp-result">0</span></strong>
