--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4-in-1 Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="image/favicon.png" sizes="16x16">
     <script src="script.js" defer></script>
 </head>
 
