--- a/source/index.html
+++ b/source/index.html
@@ -322,8 +322,8 @@
         Numbers: 0-9<br />
         Operations: + - * / % ^ <br />
         Decimal: . <br />
-        Enter: Calculate<br />
-        Esc: Clear<br />
+        Equally/Calculate: Enter<br />
+        Clear: Esc<br />
         Backspace: Backspace/Delete<br />
         Arrow keys: Navigate cursor<br />
         Open parenthesis: (<br />
