--- a/source/index.html
+++ b/source/index.html
@@ -322,9 +322,9 @@
         Numbers: 0-9<br />
         Operations: + - * / % ^ <br />
         Decimal: . <br />
-        Equally/Calculate: Enter<br />
+        Equals/Calculate: Enter<br />
         Clear: Esc<br />
-        Backspace: Backspace/Delete<br />
+        Backspace: Backspace<br />
         Arrow keys: Navigate cursor<br />
         Open parenthesis: (<br />
         Close parenthesis: )
